chore: Fix dark mode class names

--- a/demo/styles.module.scss
+++ b/demo/styles.module.scss
@@ -1,9 +1,9 @@
-@use "@cloudscape-design/design-tokens/index.scss" as awsui;
+@use "@cloudscape-design/design-tokens/index.scss" as tokens;
 
 html {
   background-color: #fff;
-  &:global(.awsui-polaris-dark-mode) {
-    background-color: awsui.$color-background-layout-main;
+  &:global(.awsui-dark-mode) {
+    background-color: tokens.$color-background-layout-main;
   }
 }
 
@@ -12,5 +12,5 @@ html {
   top: 0;
   width: 200px;
   float: right;
-  margin-left: awsui.$space-scaled-l;
+  margin-left: tokens.$space-scaled-l;
 }
